routes/vs-single.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: backend
  namespace: webapp
spec:
  hosts:
  - backend
  http:
  - headers:
      request:
        set:
          test: "true"
    route:
    - destination:
        host: backend-v2.webapp.svc.cluster.local
      weight: 25
    - destination:
        host: backend-v1.webapp.svc.cluster.local
      weight: 75
